--- a/BlankFinance/BlankFinance/Views/Shared/_Layout.cshtml
+++ b/BlankFinance/BlankFinance/Views/Shared/_Layout.cshtml
@@ -10,9 +10,11 @@
     <title>Blank Finance</title>
 </head>
 <body>
-    <div class="navbar navbar-light bg-primary" role="navigation">
-        <div class="row">
-            <a class="col navbar-brand" href="#">Blank Finance</a>
+    <div class="navbar navbar-light fa-navicon bg-info" role="navigation">
+        <div class="row col-12">
+            <a class="col-4 btn btn-block" asp-controller="Home" asp-action="Index">Blank Finance</a>
+            <a class="col-4 btn btn-block" asp-controller="Home" asp-action="Index">Budget</a>
+            <a class="col-4 btn btn-block" asp-controller="Home" asp-action="Index">Statistics</a>
         </div>
     </div>
     <div class="row m-1 p-1">
