--- a/BlankFinance/BlankFinance/Views/Shared/_Layout.cshtml
+++ b/BlankFinance/BlankFinance/Views/Shared/_Layout.cshtml
@@ -13,12 +13,12 @@
     <div class="navbar navbar-light fa-navicon bg-info" role="navigation">
         <div class="row col-12">
             <a class="col-4 btn btn-block" asp-controller="Home" asp-action="Index">Blank Finance</a>
-            <a class="col-4 btn btn-block" asp-controller="Home" asp-action="Index">Budget</a>
+            <a class="col-4 btn btn-block" asp-controller="Budget" asp-action="MonthlyBudget">Budget</a>
             <a class="col-4 btn btn-block" asp-controller="Home" asp-action="Index">Statistics</a>
         </div>
     </div>
     <div class="row m-1 p-1">
-        <div class="col-9">
+        <div class="col-12">
             @RenderBody()
         </div>
     </div>
