Created the form for inputting a single transaction and fixedt he links on the navbar

--- a/BlankFinance/BlankFinance/Views/Home/Index.cshtml
+++ b/BlankFinance/BlankFinance/Views/Home/Index.cshtml
@@ -4,6 +4,9 @@
     Layout = "_Layout";
 }
 
-<div></div>
+<div>
+    <button class="col-2 btn btn-block btn-dark" asp-controller="Home" asp-action="BillsPaid">Check for bills paid?</button>
+    <table></table>
+</div>
 
 
