--- a/BlankFinance/BlankFinance/Views/Shared/_Layout.cshtml
+++ b/BlankFinance/BlankFinance/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
             <a class="col-3 btn btn-block" asp-controller="Home" asp-action="Index">Blank Finance</a>
             <a class="col-3 btn btn-block" asp-controller="Budget" asp-action="MonthlyBudget">Monthly Budget</a>
             <a class="col-3 btn btn-block" asp-controller="Home" asp-action="Index">Statistics</a>
-            <a class="col-3 btn btn-block" asp-controller="ImportController" asp-action="AddTransactions">Add Transactions</a>
+            <a class="col-3 btn btn-block" asp-controller="Home" asp-action="InputSingleTransaction">Add Transactions</a>
         </div>
     </div>
     <div class="row m-1 p-1">
