--- a/BlankFinance/BlankFinance/Views/Shared/_Layout.cshtml
+++ b/BlankFinance/BlankFinance/Views/Shared/_Layout.cshtml
@@ -10,12 +10,12 @@
     <title>Blank Finance</title>
 </head>
 <body>
-    <div class="navbar navbar-light fa-navicon bg-info" role="navigation">
+    <div class="navbar navbar-light fa-navicon badge-dark" role="navigation">
         <div class="row col-12">
-            <a class="col-3 btn btn-block" asp-controller="Home" asp-action="Index">Blank Finance</a>
-            <a class="col-3 btn btn-block" asp-controller="Budget" asp-action="MonthlyBudget">Monthly Budget</a>
-            <a class="col-3 btn btn-block" asp-controller="Home" asp-action="Index">Statistics</a>
-            <a class="col-3 btn btn-block" asp-controller="Home" asp-action="InputSingleTransaction">Add Transactions</a>
+            <a class="col-3 btn btn-block text-white" asp-controller="Home" asp-action="Index">Blank Finance</a>
+            <a class="col-3 btn btn-block text-white" asp-controller="Budget" asp-action="MonthlyBudget">Monthly Budget</a>
+            <a class="col-3 btn btn-block text-white" asp-controller="Home" asp-action="Index">Statistics</a>
+            <a class="col-3 btn btn-block text-white" asp-controller="Home" asp-action="InputSingleTransaction">Add Transactions</a>
         </div>
     </div>
     <div class="row m-1 p-1">
