--- a/BlankFinance/BlankFinance/Views/Home/InputSingleTransaction.cshtml
+++ b/BlankFinance/BlankFinance/Views/Home/InputSingleTransaction.cshtml
@@ -5,24 +5,24 @@
 }
 
 <div asp-validation-summary="All" class="text-danger"></div>
-    <form asp-controller="Importer" asp-action="ImportSingleTransaction" method="post" class="col-12">
+    <form asp-controller="Import" asp-action="ImportSingleTransaction" method="post" class="col-12">
         <h3>Date</h3>
         <div class="form-group">
-            <label>Date:</label><input asp-for="Date" class="form-control" />
+            <label>Date:</label><input asp-for="Date" type="date" class="form-control" />
         </div>
-        <h3>Date</h3>
+        <h3>Type</h3>
         <div class="form-group">
             <label>Type:</label><input asp-for="Type" class="form-control" />
         </div>
-        <h3>Date</h3>
+        <h3>Description</h3>
         <div class="form-group">
             <label>Description:</label><input asp-for="Description" class="form-control" />
         </div>
-        <h3>Date</h3>
+        <h3>Amounr</h3>
         <div class="form-group">
-            <label>Amount:</label><input asp-for="Amount" class="form-control" />
+            <label>Amount:$</label><input asp-for="Amount" type="number" min="0.01" step="0.01" max="2500" class="form-control" value="0.00" />
         </div>
-        <h3>Date</h3>
+        <h3>Category</h3>
         <div class="form-group">
             <label>Category:</label><input asp-for="Category" class="form-control"/>
         </div>
