--- a/BlankFinance/BlankFinance/Views/Import/ChooseFile.cshtml
+++ b/BlankFinance/BlankFinance/Views/Import/ChooseFile.cshtml
@@ -1,17 +1,17 @@
-﻿@{
+﻿@using System; 
+@model ChooseFileViewModel 
+
+@{
     Layout = null;
 }
 
 <form method="post" enctype="multipart/form-data" asp-controller="Import" asp-action="ImportCSVFile">
     <div class="form-group">
-        <div class="col-md-10">
-            <p>Upload one or more files using this form:</p>
-            <input type="file" name="files" multiple />
+        <div class="col-12">
+            <input asp-for="File" type="file"/>
         </div>
     </div>
-    <div class="form-group">
-        <div class="col-md-10">
-            <input type="submit" value="Upload" />
-        </div>
+    <div class="col-12">
+        <input type="submit" value="Upload" />
     </div>
 </form>
