--- a/BlankFinance/BlankFinance/Views/Import/ImportList.cshtml
+++ b/BlankFinance/BlankFinance/Views/Import/ImportList.cshtml
@@ -1,4 +1,6 @@
-﻿@model ImportListViewModel
+﻿@using System.Collections.ObjectModel;
+@model IQueryable<Transaction> 
+
 @{
     Layout = "_Layout";
  }
@@ -13,9 +15,9 @@
 <table class="table table-striped table-bordered col-12">
     <thead></thead>
     <tbody>
-        @if(Model.Transactions != null)
+        @if(Model != null)
         {
-            @foreach (Transaction trans in Model.Transactions)
+            @foreach (Transaction trans in Model)
             {
                 <tr>
                     <td>@trans.Date</td>
