Added the ability to bring in previously converted transactions and the ability to add single transactions

--- a/BlankFinance/BlankFinance/Views/Import/ImportList.cshtml
+++ b/BlankFinance/BlankFinance/Views/Import/ImportList.cshtml
@@ -13,7 +13,11 @@
 </div>
 <div id="popup" class="col-12 popup"></div>
 <table class="table table-striped table-bordered col-12">
-    <thead></thead>
+    <thead>
+        <tr>
+            <td>Date</td><td>Category</td><td>Description</td><td>Amount</td>
+        </tr>
+    </thead>
     <tbody>
         @if(Model != null)
         {
@@ -30,3 +34,8 @@
     </tbody>
 </table>
 
+<form action="@Url.Action("SaveToTransactionDB", "Import")" method="POST">
+    <input type="hidden" name="transactions" value="@Model">
+    <button class="btn btn-block" type="submit" >Save Transactions</button>
+</form>
+                
