--- a/BlankFinance/BlankFinance/Views/Budget/MonthlyBudget.cshtml
+++ b/BlankFinance/BlankFinance/Views/Budget/MonthlyBudget.cshtml
@@ -12,22 +12,21 @@
 <table class="col-12 table-striped table-bordered table" >
     <thead class="thead-light col-12">
         <tr>
-            <td class="col-12 text-center font-weight-bold" colspan="@Model.Columns.Count">Monthly Budget</td>
+            <td class="col-12 text-center font-weight-bold" colspan="@Model.Rows.Count">Monthly Budget</td>
         </tr>
-        @if (Model.Columns != null && Model.Columns.Count() > 0)
+        @if (Model.Rows != null && Model.Rows.Count() > 0)
         {
-            @for (int j = 0; j < Model.Columns.Count(); j++)
+            @for (int j = 0; j < Model.Rows.Count(); j++)
             {
-                BudgetColumn column = Model.Columns[j];
+                BudgetRow row = Model.Rows[j];
 
-                <tr><td>@column.ColumnName</td></tr>
-                for (int i = 0; i < column.Rows.Count(); i++)
+                <tr><td>@row.RowName</td></tr>
+                for (int i = 0; i < row.Columns.Count(); i++)
                 {
-                    BudgetRow row = column.Rows[i];
+                    BudgetColumn column = row.Columns[i];
                 <tr>
-                    <td>@row.RowName</td>
-                    <td>@row.ExpectedTotal</td>
-                    <td>@row.ActualTotal</td>
+                    <td>@column.ColumnName</td>
+                    <td>@column.Amount</td>
                 </tr>
                 }
             }
